[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Background/space.png" type="Texture" id=1]
[ext_resource path="res://Scripts/menu_overwrite.gd" type="Script" id=2]
[ext_resource path="res://ola/poco/Poco.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/transicao.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[node name="menu_overwrite" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="transition" parent="." instance=ExtResource( 6 )]
visible = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4000, 1124 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1824, 416 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 71.0
margin_top = 558.0
margin_right = 1209.0
margin_bottom = 683.0
custom_constants/separation = 850

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = 116.0
margin_bottom = 125.0
focus_neighbour_left = NodePath("../Button2")
focus_neighbour_right = NodePath("../Button2")
focus_next = NodePath("../Button2")
focus_previous = NodePath("../Button2")
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "CANCEL"
flat = true

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 966.0
margin_right = 1138.0
margin_bottom = 125.0
focus_neighbour_left = NodePath("../Button")
focus_neighbour_right = NodePath("../Button")
focus_next = NodePath("../Button")
focus_previous = NodePath("../Button")
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "OVERWRITE"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 68.0
margin_top = 186.0
margin_right = 1216.0
margin_bottom = 311.0
custom_constants/separation = 850

[node name="Button3" type="Button" parent="HBoxContainer2"]
margin_right = 1136.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
text = "When creating a new game the existing data will be overwriten."
flat = true

[connection signal="mouse_entered" from="HBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Button2" to="." method="_on_Button2_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
